# mqtt-inspector

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cliff.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue--question.md
.github/workflows/: .github-ci.yml  deploy-latest-tagged.yaml  pull_request.yaml  push_master.yaml  release-plz.yml  release.yml  reusable-build.yaml  reusable-deploy-latest.yaml
backend/: CHANGELOG.md  Cargo.toml
backend/src/: config.rs  jsonrpc.rs  main.rs  mqtt.rs  server.rs
backend/src/server/: broker_peer_bridge.rs  config.rs  jsonrpc.rs  mqtt.rs  websocket.rs
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  store.ts
frontend/src/components/: add_broker.svelte  app_nav_icon.svelte  cleanPipelineRows.svelte  editor_group.svelte  editor_layout.svelte  group_editor.svelte  message_controls.svelte  messages.svelte  messages.test.ts  messages.ts  monaco.svelte  monaco_diff.svelte  overwrite_pipeline.svelte  pipeline.svelte  publish_message.svelte  rate_history_chart.svelte  remove_broker.svelte  tab_context_menu.svelte  topic_selector.svelte  topic_tabs.svelte  topic_tree.svelte  topic_tree.ts
frontend/src/lib/: clipboard.ts  dnd.ts  helper.test.ts  helper.ts  layout.test.ts  layout.ts  socket.test.ts  socket.ts  state.ts  tabs.test.ts  tabs.ts  ws_msg_handling.test.ts  (+1 more)
test/config_source/: brokers.json
test/system/: .gitignore  README.md  run.sh  stress_test.py
(+11 files in other folders)
