[package]
name = "backend"
version = "0.1.0"
authors = ["Kai Lawrence <mail@kailawrence.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.23.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
serde_json = "1.0.114"
serde = { version = "1", features= ["derive"] }
bytes = "1.5.0"
chrono = "0.4.34"
