[package]
name = "backend"
version = "0.1.0"
authors = ["Kai Lawrence <mail@kailawrence.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.23.0"
tokio = { version = "1", features = ["full"] }
futures-channel = "0.3.30"
futures-util = "0.3.30"
serde_json = "1.0.114"
serde = { version = "1", features = ["derive"] }
bytes = "1.5.0"
chrono = "0.4.34"
warp = "0.3.6"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
copy_dir = "0.1.3"
